--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-31 12:17:03
+lastsearch = 2024-07-31 13:16:30
 
 [www.instagram.com]
-match = -107.7%%
-title = Hoi Chan (@hoichandraws) - Instagram
+match = -238.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
