--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-31 10:47:06
+lastsearch = 2024-07-31 13:23:30
 
 [demxanh.com]
-match = 51.7%%
-title = Chiếu điều hòa cao su non Tencel Ghi
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = 24.1%%
+title = Chiếu điều hòa cao su non đa sắc xám hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
 
 [leflair.com]
 match = 6.9%%
