--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-31 06:11:31
+lastsearch = 2024-07-31 13:30:59
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,14 +62,14 @@ title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/cinestar-kien-giang/
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -175.0%%
-title = Nuôi gà, trồng rau trên sân thượng giữa thủ đô | VTC16
-url = https://www.youtube.com/watch?v=i4RfzdKxKxA
+match = -106.2%%
+title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
+url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
 match = -218.8%%
