--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-31 10:17:55
+lastsearch = 2024-07-31 13:24:13
 
 [demxanh.com]
 match = -84.2%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOoqUJ1Voe6Ugu05Kfa5Jo2Jtwalllqg9EP0u1_f5YTBqlevV-xhL
+url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
 match = -73.7%%
