--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-31 12:23:14
+lastsearch = 2024-07-31 13:22:48
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,14 +17,14 @@ title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = -76.2%%
-title = Thảm trải sàn phòng khách THẢM TRANH BALI LOẠI 2M x ...
-url = https://www.lazada.vn/products/tham-trai-san-phong-khach-tham-tranh-bali-loai-2m-x-3m-i356266333.html
+match = -104.8%%
+title = Thảm trải sàn phòng khách BALI sang trọng loại to KT 2m x ...
+url = https://www.lazada.vn/products/tham-trai-san-phong-khach-bali-sang-trong-loai-to-kt-2m-x-3m-nen-xanh-duong-hoa-van-mau-trang-in-3d-sac-net-i281430696.html
 
 [tiki.vn]
-match = -128.6%%
-title = Thảm trải sàn, thảm lì Bali, thảm trang trí phòng khách 2m x ...
-url = https://tiki.vn/tham-trai-san-tham-li-bali-tham-trang-tri-phong-khach-2m-x-3m-p76292949.html
+match = -9.5%%
+title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
+url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
 
 [muachunghaiphong.com]
 match = 0.0%%
