--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-31 12:59:34
+lastsearch = 2024-07-31 14:26:39
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Non-alcoholic fatty liver disease and colorectal cancer ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
+match = -223.5%%
+title = Translational strategies for neuroprotection in ischemic stroke
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
 match = -11.8%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -5.9%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOop7zGFs_psi98S7p4Rra1f40Xg2BU6PU4FjUs_f2QMp6RpNPC74
+url = https://www.diepxuan.com/chan-kq-song-5kg.html
 
 [www.kvaser.cn]
 match = -5.9%%
