--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-31 13:26:24
+lastsearch = 2024-07-31 14:33:05
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = -23.1%%
+title = Coco Chan - Wellesley
+url = https://hk.linkedin.com/in/coco-chan-734351222
 
 [www.instagram.com]
 match = -230.8%%
@@ -117,9 +117,9 @@ title = Paris Olympics day 4: Haughey wins 100m semi after Biles ...
 url = https://www.scmp.com/sport/paris-olympics-2024/hong-kong/article/3272446/paris-olympics-day-4-hong-kong-pair-chase-table-tennis-bronze-china-gold-medal-game
 
 [www.facebook.com]
-match = 0.0%%
-title = Coco Chan
-url = https://www.facebook.com/1213cocochan/?locale=ur_PK
+match = -15.4%%
+title = Coco Alexandra Chan
+url = https://www.facebook.com/CocoAlexandraChan/
 
 [tel.directory.gov.hk]
 match = -84.6%%
@@ -220,4 +220,14 @@ url = https://www.gettyimages.fr/photos/chan-hoi-wan
 match = -130.8%%
 title = Paula Badosa | Player Stats & More
 url = https://www.wtatennis.com/players/320124/paula-badosa
+
+[apnews.com]
+match = 0.0%%
+title = 
+url = https://apnews.com/article/coco-lee-death-suicide-hong-kong-singer-c007785b3944087f428cf5d07d23fb97
+
+[www.plkc.edu.hk]
+match = -7.7%%
+title = Scholarships - PLKC
+url = https://www.plkc.edu.hk/centenarian/scholarships/
 
