--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-31 09:49:15
+lastsearch = 2024-07-31 14:38:46
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = -9.1%%
-title = 60 PHÚT COMBO FULLFACE
-url = https://www.facebook.com/PKCKDL.VTMQTHOAKY/photos/60-phút-combo-fullface-định-hình-và-căn-chỉnh-khung-mặt-tự-nhiên-không-phẫu-thuậ/458346137051558/
+match = 14.3%%
+title = Hội Ăn Vặt Thuận Giao
+url = https://www.facebook.com/groups/351555799862066/posts/d41d8cd9/1033458921671747/
 
 [nhua66a.com]
 match = -17.9%%
@@ -152,9 +152,9 @@ title = Hành trình thai giáo 280 ngày by Nguyễn Huy Hoàng
 url = https://issuu.com/huyhoangytn/docs/hs2a_hanh-trinh-thai-giao-280-ngay
 
 [m.facebook.com]
-match = -35.7%%
-title = Hội Ăn Vặt Thuận Giao | Ca nhà ăn gì Ib e ship nha
-url = https://m.facebook.com/groups/351555799862066/posts/1030550318629274/
+match = -39.3%%
+title = Chiều nay em co 30kg ghẹ xanh to chăc mẩy ủ đá tươi ngon
+url = https://m.facebook.com/groups/2393083487434360/posts/7839014392841215/
 
 [dabanhmat.com]
 match = -28.6%%
