--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-31 06:24:00
+lastsearch = 2024-07-31 14:36:20
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = 18 BƯỚC 💥 Modern Tacking CỰC ĐẸP // CÓ HƯỚNG DẪN Ở ..
 url = https://www.youtube.com/watch?v=PWk3nmCXI0k
 
 [books.google.com]
-match = -87.5%%
-title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
-url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENQWZ_7Vv&sig=ACfU3U0M0MTtab8IXr25KwjXmdOJdTL35w&hl=en&sa=X&ved=2ahUKEwiduoCu9M-HAxUWrYkEHWqVBJ4Q6AF6BAgdEAM
+match = -156.2%%
+title = Nizu #3: Bạn bè - Page 14 - Google Books Result
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkNpcfob0&sig=ACfU3U3CDLgOT1iL_JWOaCIDbeSTs8rpPw&hl=en&sa=X&ved=2ahUKEwj9loS04tCHAxUurYkEHVqIClsQ6AF6BAgbEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
