--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-07-31 10:19:20
+lastsearch = 2024-07-31 14:39:51
 
 [chieutrelanlan.com]
-match = 0.0%%
-title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
+match = -3.6%%
+title = Chiếu trúc cao cấp mắt nhỏ không viền màu đen 80x190cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-80x190cm-31.html
 
 [chieutrelinhchi.com]
 match = 0.0%%
@@ -135,4 +135,9 @@ url = https://www.facebook.com/thegioichieutruc/
 match = 50.0%%
 title = Chiếu Trúc Việt Nam - Đà Nẵng
 url = https://suongtuyet.com/chieu-truc-bong-hong
+
+[www.vinmec.com]
+match = -85.7%%
+title = posts-vi-7.xml
+url = https://www.vinmec.com/sitemap/posts-vi-7.xml
 
