--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-31 12:10:58
+lastsearch = 2024-07-31 14:31:39
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Anti-Korean sentiment
-url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
