--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-31 16:29:39
+lastsearch = 2024-07-31 18:10:59
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -490,4 +490,9 @@ url = https://baoquangnam.vn/lua-chon-cua-hang-do-den-o-to-tai-da-nang-chat-luon
 match = -100.0%%
 title = Lịch thi đấu LPL Mùa Hè 2024 LMHT mới nhất
 url = https://thethao247.vn/400-lich-thi-dau-lpl-mua-he-2024-lmht-moi-nhat-hom-nay-d277612.html
+
+[pandora.norbreeze.vn]
+match = -30.0%%
+title = Size Guide
+url = https://pandora.norbreeze.vn/pages/size-guide-1
 
