--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-31 17:50:23
+lastsearch = 2024-07-31 18:11:20
 
 [shopee.vn]
 match = -73.9%%
@@ -12,14 +12,14 @@ title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
 url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [m.facebook.com]
-match = 8.7%%
-title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
-url = https://m.facebook.com/CHIEUNHUAHATRANG/
+match = -43.5%%
+title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
+url = https://m.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/?locale=be_BY
 
 [tiki.vn]
 match = -21.7%%
 title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên
-url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384253
+url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384238
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -29,7 +29,7 @@ url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai
 [www.lazada.vn]
 match = -21.7%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.8 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-18-m-x-2-m-i813838027.html
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-18-m-x-2-m-i813838027.html?srsltid=AfmBOoruQ8Ckg_JlfPMWRXRtd11nu0Ttsyxh8iE_L3wbQAwP1U_oUC6p
 
 [www.sendo.vn]
 match = -34.8%%
@@ -59,7 +59,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 80x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html?srsltid=AfmBOor50utRakplFJS_Mywcb4QLSsI4Ls7CdHpOpcB-Q1ZzrLCMZG3T
 
 [baothaibinh.com.vn]
 match = 17.4%%
