--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-07-31 17:27:19
+lastsearch = 2024-07-31 18:14:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -97,9 +97,9 @@ title = Thảm lau chân OZZY Màu Xám Trắng 50x80 cm 100%% cotton
 url = https://sieuthinguyenkim.com/tham-lau-chan-ozzy-mau-xam-trang-nti272045259.html
 
 [dienmaycholon.com]
-match = -83.3%%
-title = Google Tivi Sony 4K 50 Inch KD-50X80K giá rẻ, giao ngay
-url = https://dienmaycholon.com/tivi/google-tivi-sony-4k-50-inch-kd50x80k
+match = -100.0%%
+title = Sony Android Tivi 4K 50 Inch KD-50X80J/S giá rẻ, giao ngay
+url = https://dienmaycholon.com/tivi/sony-android-tivi-4k-50-inch-kd50x80js
 
 [www.teamstar-praha.cz]
 match = 21.7%%
