--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-07-31 16:36:32
+lastsearch = 2024-07-31 18:11:39
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoqkL5UCc7Sm1_SUbDWmaWQz_GBJwrcdQreZggXl6eqA_HUOoLV-
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.cloudynights.com]
 match = -75.0%%
